# bdr

./: Makefile  README.md  pyproject.toml
bdr/: __init__.py  __main__.py  cli.py  extractor.py  interpreter.py  lexer.py  mock.py  runner.py  seed.py  status.py
examples/: file-ops.bdr  functions.bdr  helpers.bdr  login.bdr  suite.bdr  targeting.bdr  variables.bdr  wikipedia-search.bdr
