[project]
name = "bdr"
version = "0.4.0"
description = "A DSL for driving browsers"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.49.0",
    "click>=8.1.0",
]

[project.scripts]
bdr = "bdr.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-playwright>=0.5.0",
    "pyinstaller>=6.0.0",
]
